setup folders for react setup

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
-<title>
-  Polling app
-</title>
+<head>
+  <title>
+    Polling app
+  </title>
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+</head>
 <body>
-  <div>Hello!</div>
+  <div class="container">
+    <h1>live polling</h1>
+  </div>
 </body>
